<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">斐讯出车问卷</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_survey">开始填写</string>
    <string name="input_car_id">请输入出车ID</string>
    <string name="input_driver_name">请输入司机姓名</string>
    <string name="yes_CN">是</string>
    <string name="no_CN">否</string>
    <string name="excellent">非常满意</string>
    <string name="good">满意</string>
    <string name="bad">不满意</string>
    <string name="poor">非常不满意</string>
    <string name="first_survey_text">请您对本次用车做出评价？</string>
    <string name="button_survey_done">结束调查</string>
    <string name="toast_survey_done">问卷填写完毕，感谢您的配合！</string>
    <string name="button_new_sruvey">重新填写问卷</string>
    <string name="button_check_month">查看本月统计</string>
    <string name="button_menu_done">结束此单填写</string>
    <string name="button_new_list">新建问卷</string>
    <string name="button_check_this_list">查看此单统计</string>
    <string name="input_month">请输入月份</string>
    <string name="button_show_result">显示结果</string>
    <string name="menu_main_check">查看统计结果</string>
    <string name="menu_main_upload">数据上传</string>
    <string name="button_export_info">导出数据</string>
    <string name="menu_display_export">导出数据</string>
    <string name="end_page_tine">请直接结束此单填写按钮结束本次评价，如果你想重新对司机进行评价，请点击重新填写问卷。非常感谢您对我们工作的支持！</string>
    <string name="question_comment">请输入(不超过40个汉字)...</string>
    <string name="button_comfirm">确定</string>

</resources>