<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:editable="false"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@null"
        android:hint="@string/end_page_tine"/>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_menu_main_survey"
            style="@style/button_normal"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_weight="1"
            android:text="@string/button_new_sruvey" />

        <Button
            android:id="@+id/button_menu_done"
            style="@style/button_normal"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_weight="1"
            android:text="@string/button_menu_done" />

    </LinearLayout>

</LinearLayout>